--- a/base/1517718847el4u03u88l/text.html
+++ b/base/1517718847el4u03u88l/text.html
@@ -2,7 +2,7 @@
 <html><head><meta name="qrichtext" content="1" /><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><style type="text/css">
 p, li { white-space: pre-wrap; }
 </style></head><body style=" font-family:'DejaVu Sans'; font-size:11pt; font-weight:400; font-style:normal;">
-<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Vue-cli -- консольная утилита, которая позволяет создавать шаблоны для новых проектов на основе чистого html, webpack или browserify. В своей работе использует Node. Так же утилита умеет запускать сервер разработчика с горячей перезагрузкой страницы при изменении в коде.</p>
+<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Vue-cli -- консольная утилита, которая позволяет создавать шаблоны для новых проектов на основе чистого html, webpack или browserify. В своей работе использует Node. Так же утилита умеет запускать сервер разработчика с горячей перезагрузкой страницы при изменениях в коде.</p>
 <p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><br /></p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Установка:</p>
 <p style=" margin-top:0px; margin-bottom:0px; margin-left:20px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><span style=" font-family:'FreeMono'; color:#6a1009;">sudo npm install -g vue-cli</span></p>
